--- a/resources/css/styles/cars.css
+++ b/resources/css/styles/cars.css
@@ -1,52 +1,37 @@
-.profile-section {
-    gap: var(--gap40);
-}
-
-.profile-photo {
+.user-photo {
     max-width: 150px;
     min-height: 150px;
     background-color: var(--color7);
-    border-radius: 50%;
+    border-radius: 100%;
 }
 
-.profile-info > h2 {
-    font-weight: var(--bold);
-}
-
-button.editProfile {
-    font-size: var(--font-size4);
-    font-weight: var(--bold);
-    min-height: 60px;
+.edit-btn {
     max-width: 350px;
-}
-
-.car-section {
-    margin-top: 100px;
-    gap: var(--gap40);
-}
-
-.car-section > div > h2 {
+    min-height: 60px;
+    background-color: var(--color7);
+    border-radius: var(--border-radius2);
+    font-size: var(--font-size3);
     font-weight: var(--bold);
 }
 
-.car-block {
-    gap: var(--gap40);
-}
-
-.car-item {
-    min-width: 320px;
+.carCart {
+    max-width: 320px;
     min-height: 400px;
     background-color: var(--color7);
     border-radius: var(--border-radius0);
     padding: var(--pg30);
 }
 
-.car-info-title {
-    text-align: end;
+.car-photo {
+    max-width: 320px;
+    min-height: 400px;
+    border-radius: var(--border-radius2);
+    background-color: black;
 }
 
-.car-title {
-    text-align: center;
-    font-size: var(--font-size4);
-    font-weight: bold;
+.addCar {
+    width: 26px;
+    height: 26px;
+    background-color: var(--color7);
+    border-radius: 100%;
 }
