--- a/resources/css/styles/partials/header.css
+++ b/resources/css/styles/partials/header.css
@@ -1,6 +1,9 @@
 header.header {
     min-height: 100px;
     padding: 0 var(--pg150);
+    position: fixed;
+    width: 100%;
+    background-color: var(--color3);
 }
 
 .logotype {
@@ -27,6 +30,7 @@ button.nav-bar-btn {
     top: 0;
     right: 0;
     max-width: 350px;
+    height: 100vh;
     width: 100%;
     padding: 100px 50px;
     background-color: var(--color7);
