--- a/resources/css/styles/cars.css
+++ b/resources/css/styles/cars.css
@@ -43,21 +43,12 @@
 
 .carInfo-item {
     max-width: calc((100% / 2) - 20px);
-    min-height: 402px;
-}
-
-.carInfo-item-medium {
-    max-width: 474.3333px;
-}
-
-.carInfo-item-photo {
-    min-height: 350px;
-    background-color: var(--color7);
-    border-radius: var(--border-radius2);
+    border: 2px solid var(--color7);
+    padding: 25px 50px;
 }
 
 .carInfo-item__destroyBtn {
-    background-color: var(--color2);
+    background-color: transparent;
     width: 25px;
     height: 25px;
     border-radius: 6px;
