--- a/resources/css/styles/index.css
+++ b/resources/css/styles/index.css
@@ -178,6 +178,14 @@ ul {
     align-items: center;
 }
 
+.modalWindow {
+    max-width: 350px;
+    width: 100%;
+    min-height: 60px;
+    background-color: #fff;
+    font-weight: var(--bold);
+}
+
 /* Часто используемые классы */
 
 .gap100 {
@@ -223,6 +231,13 @@ ul {
 @media (max-width:768px) {
     * {
         font-size: 12px;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4 {
+        height: auto;
     }
 
     .container {
