--- a/resources/css/styles/cars.css
+++ b/resources/css/styles/cars.css
@@ -8,7 +8,6 @@
 .edit-btn {
     max-width: 350px;
     min-height: 60px;
-    background-color: var(--color7);
     border-radius: var(--border-radius2);
     font-size: var(--font-size3);
     font-weight: var(--bold);
@@ -16,6 +15,7 @@
 
 .carCart {
     max-width: 340px;
+    min-width: 320px;
     min-height: 400px;
     background-color: var(--color7);
     border-radius: var(--border-radius0);
