--- a/resources/css/styles/partials/header.css
+++ b/resources/css/styles/partials/header.css
@@ -27,7 +27,7 @@ button.nav-bar-btn {
 }
 
 .nav-bar {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     max-width: 350px;
@@ -44,5 +44,10 @@ button.nav-bar-btn {
 @media (max-width:768px) {
     header.header {
         padding: var(--pg20);
+    }
+
+    .nav-bar {
+        max-width: 200px;
+        padding: 100px 15px;
     }
 }
