--- a/resources/css/styles/cars.css
+++ b/resources/css/styles/cars.css
@@ -43,8 +43,10 @@
 
 .carInfo-item {
     max-width: 100%;
+    min-height: 100px;
     border: 2px solid var(--color7);
-    padding: 25px 40px;
+    border-radius: var(--border-radius2);
+    padding: 0 50px;
 }
 
 .car-info {
